[gd_scene load_steps=2 format=2]

[ext_resource path="res://characters/player/camera/player_camera.gd" type="Script" id=1]

[node name="PlayerCamera" type="Camera2D"]
pause_mode = 2
current = true
limit_left = -1000000
limit_top = -1000000
limit_right = 1000000
limit_bottom = 1000000
drag_margin_h_enabled = false
drag_margin_v_enabled = false
drag_margin_left = 0.05
drag_margin_top = 1.0
drag_margin_right = 0.05
drag_margin_bottom = 1.0
script = ExtResource( 1 )

[node name="PlayerTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="CameraTween" type="Tween" parent="."]

[node name="TransitionFinder" type="RayCast2D" parent="."]
cast_to = Vector2( 100, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false
